--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.product-detail{
+    width: 360px;
+    height: calc(97vh - 80px);
+    top: 80px;
+}
