--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,44 @@
 @tailwind components;
 @tailwind utilities;
 
-.product-detail{
+.product-detail {
     width: 360px;
     height: calc(97vh - 80px);
     top: 80px;
+}
+
+.checkout-side-menu {
+    width: 360px;
+    height: calc(97vh - 80px);
+    top: 80px;
+}
+
+/* ===== Scrollbar CSS ===== */
+.scrollable-cards {
+    overflow: scroll;
+}
+
+/* Firefox */
+.scrollable-cards {
+    scrollbar-width: auto;
+    scrollbar-color: #141414 #ffffff;
+    /*overflow-x: hidden; */
+}
+
+/* Chrome, Edge, and Safari */
+.scrollable-cards::-webkit-scrollbar {
+    width: 16px;
+    /*overflow-x: hidden; */
+}
+
+.scrollable-cards::-webkit-scrollbar-track {
+    background: #ffffff;
+    /*overflow-x: hidden; */
+}
+
+.scrollable-cards::-webkit-scrollbar-thumb {
+    background-color: #141414;
+    border-radius: 10px;
+    border: 3px solid #000000;
+    /*overflow-x: hidden; */
 }
